# maestro

./: .env.example  .gitignore  .pre-commit-config.yaml  MAESTRO_COMPLETE_ARCHITECTURE.md  Maestro.cmd  PACKAGING.md  README.md  RELEASE_NOTES.md  app.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  docker.yml  release.yml
backend/: __init__.py  cli.py  config.py  database.py  installer.py  main.py  security_middleware.py
backend/adapters/: __init__.py  adapter_registry.py  base_adapter.py  custom_script_loader.py  plugin_manifest.schema
backend/adapters/adb_adapter/: __init__.py  adapter.py  capabilities.py  manifest.json
backend/adapters/dlt_adapter/: __init__.py  adapter.py  manifest.json
backend/adapters/etfw_adapter/: __init__.py  adapter.py  manifest.json
backend/adapters/power_script_adapter/: __init__.py  adapter.py  capabilities.py  manifest.json
backend/adapters/serial_console_adapter/: __init__.py  adapter.py  manifest.json
backend/api/: __init__.py  admin.py  camera_live.py  configuration.py  connections.py  datasets.py  execution.py  plugins.py  projects.py  reports.py  router.py  scheduling.py  scripts.py  templates.py  test_cases.py  websocket.py
backend/db/: __init__.py
backend/models/: __init__.py  artifact.py  device_config.py  execution.py  project.py  report.py  user.py
backend/security/: __init__.py  audit.py  auth.py  credential_manager.py  rbac.py  vault.py
backend/services/: __init__.py  allure_export.py  cleanup.py  connection_tester.py  execution_sandbox.py  live_log.py  observability.py  plugin_manager.py  project_service.py  publishers.py  report_generator.py  resource_lock_mgr.py  scheduler_service.py  script_registry.py  seed_data.py  template_store.py  test_data_manager.py  test_executor.py  versioning_service.py  ws_manager.py
backend/templates/: adb_templates.json  camera_templates.json  collectors_templates.json  dlt_templates.json  etfw_templates.json  ignition_templates.json  power_templates.json  script_templates.json  serial_templates.json  ssh_templates.json  system_templates.json
backend/utils/: __init__.py  helpers.py  logger.py  matching.py  shortcut.py  validators.py
data/: registered_scripts.json
docker/: Dockerfile  Dockerfile.frontend  docker-compose.yml  nginx.conf
docs/: .nojekyll  API_REFERENCE.md  DEVELOPER_GUIDE.md  HOWTO.md  INSTALL.md  TUTORIALS.md  USER_GUIDE.md  index.html
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
scripts/: build.ps1  build.sh  build_pypi.py  docker-build.sh  install-service-linux.sh  install-service-windows.bat  make_icon.py  run-dev.ps1  run-dev.sh
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_adapters.py  test_executor_helpers.py  test_security.py  test_validators.py  test_vault.py
(+57 files in other folders)
